Remove "console=ttyAMA0" from the base device tree files

--- a/arch/arm/boot/dts/bcm2708.dtsi
+++ b/arch/arm/boot/dts/bcm2708.dtsi
@@ -8,7 +8,7 @@
 
 	chosen {
 		/* No padding required - the boot loader can do that. */
-		bootargs = "console=ttyAMA0";
+		bootargs = "";
 	};
 
 	soc {
